--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,13 @@
-<h2 id="title">Welcome to Ember</h2>
+<div id="wrapper" class="clearfix">
+  {{rast-header}}
 
-{{outlet}}
+  <section id="content">
+    <div class="content-wrap">
+      <div class="container clearfix">
+        {{outlet}}
+      </div>
+    </div>
+  </section>
+
+  {{rast-footer}}
+</div>
