--- a/app/templates/components/rast-header.hbs
+++ b/app/templates/components/rast-header.hbs
@@ -1,12 +1,12 @@
 <header id="header" class="dark sticky-style-2">
   <div class="container clearfix">
     <div id="logo">
-      {{#link-to "index" class="standard-logo" data-dark-logo="assets/logo-dark.png"}}
-        <img src="assets/logo.png" alt="RAST Logo">
+      {{#link-to "index" class="standard-logo" data-dark-logo="assets/images/logo-dark.png"}}
+        <img src="assets/images/logo.png" alt="RAST Logo">
       {{/link-to}}
 
-      {{#link-to "index" class="retina-logo" data-dark-logo="assets/logo-dark@2x.png"}}
-        <img src="assets/logo@2x.png" alt="RAST Retina Logo">
+      {{#link-to "index" class="retina-logo" data-dark-logo="assets/images/logo-dark@2x.png"}}
+        <img src="assets/images/logo@2x.png" alt="RAST Retina Logo">
       {{/link-to}}
     </div>
 
@@ -16,7 +16,7 @@
 
         <div class="he-text">
           Bize Yazın
-          <span>tolga.ustun@rastenerji.com</span>
+          <a href="mailto:tolga.ustun@rastenerji.com?subject=%C4%B0nternet%20Sitesi%20%C3%9Czerinden%20E-Mail" target="_blank" title="E-Mail Gönderin">tolga.ustun@rastenerji.com</a>
         </div>
       </li>
 
@@ -25,7 +25,7 @@
 
         <div class="he-text">
           Bizi Arayın
-          <span>+905325095005</span>
+          <a href="tel:+905325095005" title="Arayın">+905325095005</a>
         </div>
       </li>
     </ul>
