--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -5,3 +5,24 @@
 
 @import "dark";
 @import "responsive";
+
+.grayscale {
+  filter: brightness(80%) grayscale(1) contrast(90%);
+  -webkit-filter: brightness(80%) grayscale(1) contrast(90%);
+  -moz-filter: brightness(80%) grayscale(1) contrast(90%);
+  -o-filter: brightness(80%) grayscale(1) contrast(90%);
+  -ms-filter: brightness(80%) grayscale(1) contrast(90%);
+  transition: 1s filter ease;
+  -webkit-transition: 1s -webkit-filter ease;
+  -moz-transition: 1s -moz-filter ease;
+  -ms-transition: 1s -ms-filter ease;
+  -o-transition: 1s -o-filter ease;
+}
+
+.grayscale:hover {
+  filter: brightness(100%) grayscale(0);
+  -webkit-filter: brightness(100%) grayscale(0);
+  -moz-filter: brightness(100%) grayscale(0);
+  -o-filter: brightness(100%) grayscale(0);
+  -ms-filter: brightness(100%) grayscale(0);
+}
