--- a/app/styles/portfolio.less
+++ b/app/styles/portfolio.less
@@ -4,6 +4,8 @@
 
 -----------------------------------------------------------------------------------*/
 
+@import (reference) "variables";
+@import (reference) "mixins";
 
 /* Portfolio - Filter
 -----------------------------------------------------------------*/
