--- a/app/styles/shortcodes/styled-icons.less
+++ b/app/styles/shortcodes/styled-icons.less
@@ -22,7 +22,7 @@
 	font-size: 28px;
 	color: #FFF;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
-	cursor: pointer;
+	//cursor: pointer;
 	font-style: normal;
 }
 
