--- a/app/templates/components/rast-footer.hbs
+++ b/app/templates/components/rast-footer.hbs
@@ -1,11 +1,65 @@
 <footer id="footer" class="dark">
-  <div class="container">
-    ...
-  </div>
-
   <div id="copyrights">
     <div class="container clearfix">
-      Copyright © 2016 RastEnerji.com, Her hakkı saklıdır.
+      <div class="col_half">
+        <img src="assets/images/footer-logo.png" alt="" class="footer-logo">
+
+        Copyright © 2016 RastEnerji.com, Her hakkı saklıdır.<br>
+        Bu sitenin tasarımı ve kodlaması <a href="//ozanmuyes.com" class="text-muted">Ozan MÜYESSEROĞLU</a>'na aittir.
+      </div>
+
+      <div class="col_half col_last tright">
+        <div class="copyrights-menu copyright-links fright clearfix">
+          <a href="#">Home</a>/
+          <a href="#">About</a>/
+          <a href="#">Features</a>/
+          <a href="#">Portfolio</a>/
+          <a href="#">FAQs</a>/
+          <a href="#">Contact</a>
+        </div>
+
+        <div class="fright clearfix">
+          <a href="#" class="social-icon si-small si-borderless nobottommargin si-facebook">
+            <i class="icon-facebook"></i>
+            <i class="icon-facebook"></i>
+          </a>
+
+          <a href="#" class="social-icon si-small si-borderless nobottommargin si-twitter">
+            <i class="icon-twitter"></i>
+            <i class="icon-twitter"></i>
+          </a>
+
+          <a href="#" class="social-icon si-small si-borderless nobottommargin si-gplus">
+            <i class="icon-gplus"></i>
+            <i class="icon-gplus"></i>
+          </a>
+
+          <a href="#" class="social-icon si-small si-borderless nobottommargin si-pinterest">
+            <i class="icon-pinterest"></i>
+            <i class="icon-pinterest"></i>
+          </a>
+
+          <a href="#" class="social-icon si-small si-borderless nobottommargin si-vimeo">
+            <i class="icon-vimeo"></i>
+            <i class="icon-vimeo"></i>
+          </a>
+
+          <a href="#" class="social-icon si-small si-borderless nobottommargin si-github">
+            <i class="icon-github"></i>
+            <i class="icon-github"></i>
+          </a>
+
+          <a href="#" class="social-icon si-small si-borderless nobottommargin si-yahoo">
+            <i class="icon-yahoo"></i>
+            <i class="icon-yahoo"></i>
+          </a>
+
+          <a href="#" class="social-icon si-small si-borderless nobottommargin si-linkedin">
+            <i class="icon-linkedin"></i>
+            <i class="icon-linkedin"></i>
+          </a>
+        </div>
+      </div>
     </div>
   </div>
 </footer>
