Swipe slider added
* Dynamically loading slides is still work in progress

--- a/app/styles/sliders.less
+++ b/app/styles/sliders.less
@@ -316,7 +316,8 @@ html[xmlns] .slider-wrap {display: block;}
 
 .swiper_wrapper {
   width: 100%;
-  height: 500px;
+  //height: 500px;
+  height: 686px;
   overflow: hidden;
 }
 
