--- a/app/templates/components/rast-portfolio-preview-item.hbs
+++ b/app/templates/components/rast-portfolio-preview-item.hbs
@@ -5,7 +5,7 @@
     </a>
   </div>
 
-  <div class="portfolio-desc">
+  <div class="portfolio-desc center">
     <h3><a href="portfolio-single.html">Open Imagination</a></h3>
   </div>
 </div>
