--- a/app/templates/about-us.hbs
+++ b/app/templates/about-us.hbs
@@ -1,1 +1,19 @@
+<h1>Verse 1</h1>
+<br><br><br><br><br>
 hakkımızda hayırlısı. ehü ehü
+<br><br><br><br><br><br><br><br><br><br>
+raka kaka ka-ka-ka
+<br><br><br><br><br><br><br><br><br><br>
+until you gonna get it
+<br><br><br><br><br><br><br><br><br><br>
+şeyma gül
+
+<h1>Verse 2</h1>
+<br><br><br><br><br>
+hakkımızda hayırlısı. ehü ehü
+<br><br><br><br><br><br><br><br><br><br>
+raka kaka ka-ka-ka
+<br><br><br><br><br><br><br><br><br><br>
+until you gonna get it
+<br><br><br><br><br><br><br><br><br><br>
+şeyma gül
